--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="profile-card">
     <h1 class="profile-card-title">Kelvin Zhang</h1>
-    <h2 class="profile-card-subtitle">Software Engineer @ Google Health</h2>
+    <h2 class="profile-card-subtitle">Software Engineer</h2>
     <h2 class="profile-card-action"><a href="mailto:hello@iamkelv.in">hello@iamkelv.in</a></h2>
 </header>
 <nav>
